# tap-asteroids

./: .env  .gitignore  catalog.json  pyproject.toml
tap_asteroids/: __init__.py  client.py  discovery.py  streams.py  sync.py
tap_asteroids/schemas/: all_asteroids.json  browse_neos.json  browse_neos2.json  feed_neos.json
tests/: test_client.py  test_streams.py  test_tap_asteroids.py
tests/cassettes/: test_get_browse_neos.yaml  test_get_feed_neos.yaml
